# protego-hw

./: .gitignore  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml  run_analytics.py  run_scrape.py  scrape.py  settings.py
alembic/: env.py
alembic/versions/: 011632ce78d6_add_unique_constraints_to_name_and_url_.py  0d3d27e2fd9f_add_foreign_key_relationship_between_.py  3d1a2c00e797_create_drug_classes_urls_table.py  4946f7590e8f_add_analyzed_column_to_drugclass_model.py  5d0cab0b26ec_update_drug_model_with_longer_name_.py  5d7b34c10ec1_add_ndc_codes_array_field_to_drug_model.py  60fdabdd4707_add_unique_constraint_to_drug_model.py  eba8865f11ec_add_analytics_models.py  fb7e77f41cb1_add_is_analyzed_field_to_drugclass_model.py
analytics/: Dockerfile  __init__.py  base.py  classification_analysis.py  name_analysis.py  ndc_analysis.py  network_analysis.py  text_mining.py  time_analysis.py  url_analysis.py
api/: Dockerfile  app.py  dependencies.py
api/routers/: analytics.py  drug.py  drug_class.py  drug_relationship.py
api/schemas/: __init__.py  analytics.py  drug.py  drug_class.py
k8s/: README.md  analytics-cronjob.yaml  api-deployment.yaml  api-ingress.yaml  api-service.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  scraper-cronjob.yaml  secret.yaml
models/: __init__.py  analytics.py  dailymed.py
scraper/: .gitignore  Dockerfile  main.py  pyproject.toml  scrapers.py
shared_models/: __init__.py  alembic.ini  dailymed.py  env.py  pyproject.toml  settings.py
(+2 files in other folders)
